fix who datafile

--- a/WHO_clean_data.ipynb
+++ b/WHO_clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,34 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PUBLISH STATES (string)',\n",
-       " 'Year (string)',\n",
-       " 'WHO region (string)',\n",
-       " 'Country (string)',\n",
-       " 'Sex (string)',\n",
-       " 'Average death rate due to natural disasters (per 100 000 population) (string)',\n",
-       " 'Average death rate due to natural disasters (per 100 000 population) (numeric)',\n",
-       " 'Average death rate due to natural disasters (per 100 000 population) (comment)']"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(data_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +106,7 @@
        "4  2012-2016   Angola      Female"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,51 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Code',\n",
-       " 'DisplayValue',\n",
-       " 'URL',\n",
-       " 'DS',\n",
-       " 'FIPS',\n",
-       " 'IOC',\n",
-       " 'ISO2',\n",
-       " 'ISO',\n",
-       " 'ITU',\n",
-       " 'MARC',\n",
-       " 'WHO',\n",
-       " 'WMO',\n",
-       " 'GEOMETRY',\n",
-       " 'MORT',\n",
-       " 'LAND_AREA_KMSQ_2012',\n",
-       " 'LANGUAGES_EN_2012',\n",
-       " 'WHO_REGION',\n",
-       " 'WHO_REGION_CODE',\n",
-       " 'World Bank income group',\n",
-       " 'World Bank income group code',\n",
-       " 'SHORTNAMEES',\n",
-       " 'SHORTNAMEFR',\n",
-       " 'WHOLEGALSTATUS',\n",
-       " 'World Bank income group GNI reference year',\n",
-       " 'World Bank income group release date']"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(country)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +148,7 @@
        "      <th></th>\n",
        "      <th>Country</th>\n",
        "      <th>Mortality</th>\n",
-       "      <th>Land Area</th>\n",
+       "      <th>Land_Area</th>\n",
        "      <th>Region</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -264,7 +193,7 @@
        "</div>"
       ],
       "text/plain": [
-       "               Country  Mortality  Land Area                 Region\n",
+       "               Country  Mortality  Land_Area                 Region\n",
        "0          Afghanistan     3010.0    652,230  Eastern Mediterranean\n",
        "1              Albania     4005.0     27,400                 Europe\n",
        "2              Algeria     1010.0  2,381,740                 Africa\n",
@@ -272,7 +201,7 @@
        "4  Antigua and Barbuda     2010.0        440               Americas"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,23 +211,36 @@
     "\n",
     "country_rename = whocountry.rename(columns={'DisplayValue': 'Country',\n",
     "                                            'MORT': 'Mortality',\n",
-    "                                              'LAND_AREA_KMSQ_2012': 'Land Area', \n",
+    "                                              'LAND_AREA_KMSQ_2012': 'Land_Area', \n",
     "                                              'WHO_REGION': 'Region'})\n",
     "country_rename.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pandas' has no attribute 'index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-34d33f4aff75>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcombine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcountry_rename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrenamed\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Country\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mleft_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcombine\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'index'"
+     ]
+    }
+   ],
    "source": [
-    "combine = pd.merge(country_rename, renamed, on=\"Country\")"
+    "combine = pd.merge(country_rename, renamed, on=\"Country\", left_index=False)\n",
+    "combine =pd.index.drop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -322,18 +264,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country</th>\n",
        "      <th>Mortality</th>\n",
-       "      <th>Land Area</th>\n",
+       "      <th>Land_Area</th>\n",
        "      <th>Region</th>\n",
        "      <th>Year</th>\n",
        "      <th>Gender</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Afghanistan</td>\n",
+       "      <th>Afghanistan</th>\n",
        "      <td>3010.0</td>\n",
        "      <td>652,230</td>\n",
        "      <td>Eastern Mediterranean</td>\n",
@@ -341,8 +289,7 @@
        "      <td>Both sexes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Albania</td>\n",
+       "      <th>Albania</th>\n",
        "      <td>4005.0</td>\n",
        "      <td>27,400</td>\n",
        "      <td>Europe</td>\n",
@@ -350,8 +297,7 @@
        "      <td>Both sexes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Algeria</td>\n",
+       "      <th>Algeria</th>\n",
        "      <td>1010.0</td>\n",
        "      <td>2,381,740</td>\n",
        "      <td>Africa</td>\n",
@@ -359,8 +305,7 @@
        "      <td>Both sexes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Angola</td>\n",
+       "      <th>Angola</th>\n",
        "      <td>1020.0</td>\n",
        "      <td>1,246,700</td>\n",
        "      <td>Africa</td>\n",
@@ -368,8 +313,7 @@
        "      <td>Both sexes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Antigua and Barbuda</td>\n",
+       "      <th>Antigua and Barbuda</th>\n",
        "      <td>2010.0</td>\n",
        "      <td>440</td>\n",
        "      <td>Americas</td>\n",
@@ -381,22 +325,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                Country  Mortality  Land Area                 Region  \\\n",
-       "2           Afghanistan     3010.0    652,230  Eastern Mediterranean   \n",
-       "5               Albania     4005.0     27,400                 Europe   \n",
-       "8               Algeria     1010.0  2,381,740                 Africa   \n",
-       "11               Angola     1020.0  1,246,700                 Africa   \n",
-       "14  Antigua and Barbuda     2010.0        440               Americas   \n",
+       "                     Mortality  Land_Area                 Region       Year  \\\n",
+       "Country                                                                       \n",
+       "Afghanistan             3010.0    652,230  Eastern Mediterranean  2012-2016   \n",
+       "Albania                 4005.0     27,400                 Europe  2012-2016   \n",
+       "Algeria                 1010.0  2,381,740                 Africa  2012-2016   \n",
+       "Angola                  1020.0  1,246,700                 Africa  2012-2016   \n",
+       "Antigua and Barbuda     2010.0        440               Americas  2012-2016   \n",
        "\n",
-       "         Year      Gender  \n",
-       "2   2012-2016  Both sexes  \n",
-       "5   2012-2016  Both sexes  \n",
-       "8   2012-2016  Both sexes  \n",
-       "11  2012-2016  Both sexes  \n",
-       "14  2012-2016  Both sexes  "
+       "                         Gender  \n",
+       "Country                          \n",
+       "Afghanistan          Both sexes  \n",
+       "Albania              Both sexes  \n",
+       "Algeria              Both sexes  \n",
+       "Angola               Both sexes  \n",
+       "Antigua and Barbuda  Both sexes  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,12 +350,13 @@
    "source": [
     "#redcc[(redcc[\"KPI_Year\"]>=2012)]\n",
     "finalwho = combine[(combine['Gender'] =='Both sexes')]\n",
+    "finalwho.set_index('Country', inplace=True)\n",
     "finalwho.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
